# coop-os

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yml  launch.sh  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: lint.yml  release.yml
agent_os/: main.py  models.py  parser.py  store.py
agent_os/backend/: models.py  parser.py  store.py
agent_os/content/milestones/: milestone-1-new-milestone.md  milestone-2-new-milestone.md
agent_os/content/notes/: note-1-new-note.md
agent_os/tui/: app.py  nav.py  render.py  widgets.py
content/milestones/: template.md
content/notes/: template.md
content/skills/: scan-notes.md  skill-1-check-in.md  skill-2-check-out.md  skill-3-scan-notes.md  skill-4-weekly-review.md  weekly-review.md
content/templates/: milestone.md  note.md  role.md
coop_os/: iterm_launch.py  main.py
coop_os/agent/: AGENT.md
coop_os/backend/: models.py  parser.py  recurrence.py  schema.py  store.py
coop_os/context/: AGENT.md
coop_os/skills/: skill-3-scan-notes.md
coop_os/tui/: __init__.py  actions.py  app.py  confirm_delete.py  filter_screen.py  keybindings_screen.py  nav.py  render.py  session.py  state.py  watcher.py
scripts/: clear_workspace.py  migrate_disk_layout.py  reset_session.py  seed_workspace.py  write_iterm_profiles.py
skills/: check-in.md  check-out.md  scan-notes.md  weekly-review.md
tests/: test_backend.py  test_iterm_launch.py  test_recurrence.py  test_recurring_store.py  test_tui_navigation.py
(+44 files in other folders)
