[project]
name = "coop-os"
version = "0.4.0"
description = "Personal life OS — markdown-backed, browser UI"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=0.89.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
coop-os = "coop_os.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "D300",
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "C4",  # comprehensions
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
known-first-party = ["coop_os"]

[tool.basedpyright]
pythonVersion = "3.13"
# Suppress noisy warnings from Textual's dynamic patterns and untyped stubs
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportImplicitOverride = "none"
reportMissingTypeStubs = "none"
reportAny = "none"
